syntax = "proto3";

package order;

option go_package = "./order";

message CreateOrderReq{
    int64 UserId = 1;
    string TotalPrice = 2;
    CreateOrderInfo OrderInfo = 3;
}

message CreateOrderInfo{
    int64 Client = 1;
    string AppointmentStartTime = 2;
    string AppointmentEndTime = 3;
    int64 SenderAddressId = 4;
    int64 ReceiveAddressId = 5;
    string Remark = 6;
    repeated CreateOrderGoods Goods = 7;
}

message CreateOrderGoods{
    int64 GoodsId = 1;
    int64 Num = 2;
    string GoodsName = 3;
}

message CreateOrderReply{
 string OrderSerialNumber = 1;
}

message CancelOrderReq{
    string OrderSerialNumber = 1;
    int64 CancelOperator = 2;
    string CancelCause = 3;
}

message CancelOrderReply{
    string OrderSerialNumber = 1;
}

message CloseOrderReq{
    string OrderSerialNumber = 1;
}

message CloseOrderReply{
    string OrderSerialNumber = 1;
}

message DeleteOrderReq{
    string OrderSerialNumber = 1;
}

message DeleteOrderReply{
    string OrderSerialNumber = 1;
}

message GetOrderReq{
    string OrderSerialNumber = 1;
}

message GetOrderReply{
    int64 ID  = 1;
    string OrderSerialNumber  = 2;
    int64 MemberID = 3;
    int64 Client = 4;
    int64 OrderStatus = 5;
    string OrderStatusName = 6;
    string OrderAmount = 7;
    string MemberNickname = 8;
    string MemberMobile = 9;
    string PaymentAmount = 10;
    string PaymentSn = 11;
    int64 PaymentType = 12;
    int64 PaymentTime = 13;
    int64 PaymentStatus = 14;
    int64 GoodsNum = 15;
    int64 PaymentLimitTime = 16;
}

message PaymentSuccessTccReq{}
message PaymentSuccessTccReply{}

service order {
    //查询订单
    rpc getOrder(GetOrderReq) returns(GetOrderReply);
    //创建订单
    rpc createOrder(CreateOrderReq) returns(CreateOrderReply);
    //关闭订单
    rpc closeOrder(CloseOrderReq) returns(CloseOrderReply);
    //取消订单
    rpc cancelOrder(CancelOrderReq) returns(CancelOrderReply);
    //删除订单
    rpc deleteOrder(DeleteOrderReq) returns(DeleteOrderReply);

    //订单支付成功TccTry
    rpc paymentSuccessOrderTccTry(PaymentSuccessTccReq) returns(PaymentSuccessTccReply);
    //订单支付成功TccConfirm
    rpc paymentSuccessOrderTccConfirm(PaymentSuccessTccReq) returns(PaymentSuccessTccReply);
    //订单支付成功TccCancel
    rpc paymentSuccessOrderTccCancel(PaymentSuccessTccReq) returns(PaymentSuccessTccReply);
}